--- a/app/src/main/res/layout/mn_activity_create_employee.xml
+++ b/app/src/main/res/layout/mn_activity_create_employee.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#F8E4E4"
     tools:context=".activities.Manager.CreateEmployeeActivity">
 
     <LinearLayout
@@ -24,7 +25,7 @@
             <TextView
                 android:id="@+id/textView4"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="46dp"
                 android:layout_weight=".3"
                 android:text="User Name"
                 android:textSize="20sp" />
@@ -32,8 +33,9 @@
             <EditText
                 android:id="@+id/txt_mn_username_update"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="48dp"
                 android:layout_weight=".8"
+                android:background="#FAF9F9"
                 android:ems="10"
                 android:inputType="textPersonName"
                 android:textSize="20sp"
@@ -50,7 +52,7 @@
             <TextView
                 android:id="@+id/textView5"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="48dp"
                 android:layout_weight=".3"
                 android:text="Password"
                 android:textSize="20sp" />
@@ -64,6 +66,7 @@
                 android:inputType="textPassword"
                 android:minHeight="48dp"
                 android:textSize="20sp"
+                android:background="#FAF9F9"
                 tools:ignore="SpeakableTextPresentCheck" />
 
         </LinearLayout>
@@ -77,7 +80,7 @@
             <TextView
                 android:id="@+id/textView6"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="49dp"
                 android:layout_weight=".3"
                 android:text="Confirm"
                 android:textSize="20sp" />
@@ -92,6 +95,7 @@
                 android:inputType="textPassword"
                 android:minHeight="48dp"
                 android:textSize="20sp"
+                android:background="#FAF9F9"
                 tools:ignore="SpeakableTextPresentCheck" />
 
         </LinearLayout>
@@ -105,7 +109,7 @@
             <TextView
                 android:id="@+id/textView3"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
                 android:layout_weight=".3"
                 android:text="Full name"
                 android:textSize="20sp" />
@@ -119,6 +123,7 @@
                 android:inputType="textPersonName"
                 android:minHeight="48dp"
                 android:textSize="20sp"
+                android:background="#FAF9F9"
                 tools:ignore="SpeakableTextPresentCheck" />
 
         </LinearLayout>
@@ -132,7 +137,7 @@
             <TextView
                 android:id="@+id/textView7"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="49dp"
                 android:layout_weight=".3"
                 android:text="Role"
                 android:textSize="20sp" />
@@ -146,6 +151,7 @@
                 android:inputType="none|numberDecimal"
                 android:minHeight="48dp"
                 android:textSize="20sp"
+                android:background="#FAF9F9"
                 tools:ignore="SpeakableTextPresentCheck" />
 
         </LinearLayout>
@@ -168,7 +174,7 @@
                 android:layout_weight=".5"
                 android:layout_gravity="center_vertical"
                 android:textSize="30sp"
-                android:background="#D9FF00"
+                android:background="#E8EADB"
                 android:text="Gender? Is that male?" />
 
         </LinearLayout>
