--- a/app/src/main/res/layout/mn_show_item_product.xml
+++ b/app/src/main/res/layout/mn_show_item_product.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     android:clickable="true"
     android:focusable="true"
-    android:background="?android:attr/selectableItemBackground"
+    android:background="#F8E4E4"
     android:weightSum="1">
 
     <ImageView
