--- a/app/src/main/res/layout/activity_change_profile.xml
+++ b/app/src/main/res/layout/activity_change_profile.xml
@@ -6,42 +6,49 @@
     android:layout_height="match_parent"
     tools:context=".activities.change_profile"
     android:orientation="vertical"
-    android:gravity="center">
+    android:gravity="center"
+    android:background="#F8E4E4">
+
 
 
     <EditText
         android:id="@+id/txt_change_username"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="47dp"
+        android:background="#FAF9F9"
         android:ems="13"
-        android:inputType="textPersonName"
-        android:hint="User Name"/>
+        android:hint="User Name"
+        android:inputType="textPersonName" />
+
     <EditText
         android:id="@+id/txt_change_old_pass"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="47dp"
         android:layout_marginTop="20dp"
+        android:background="#FAF9F9"
         android:ems="13"
         android:hint="Old Password"
-        android:inputType="textPassword"
-        />
+        android:inputType="textPassword" />
+
     <EditText
         android:id="@+id/txt_change_new_pass"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="47dp"
         android:layout_marginTop="20dp"
+        android:background="#FAF9F9"
         android:ems="13"
         android:hint="New Password"
-        android:inputType="textPassword"
-        />
+        android:inputType="textPassword" />
+
     <EditText
         android:id="@+id/txt_change_confirm_pass"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="47dp"
         android:layout_marginTop="20dp"
-        android:hint="Confirm Password"
+        android:background="#FAF9F9"
         android:ems="13"
-        android:inputType="textPassword"/>
+        android:hint="Confirm Password"
+        android:inputType="textPassword" />
     <Button
         android:id="@+id/btn_change"
         android:layout_width="wrap_content"
