--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.LoginActivity"
-
+    android:background="#F8E4E4"
     android:orientation="vertical">
 
     <LinearLayout
@@ -28,6 +28,7 @@
         android:drawableLeft="@drawable/ic_baseline_account_box_24"
         android:hint="UserName"
         android:textSize="25sp"
+        android:background="#FAF9F9"
         android:layout_gravity="center"
         android:layout_marginTop="30dp"/>
 
@@ -39,6 +40,7 @@
         android:hint="Password"
         android:inputType="textPassword"
         android:textSize="25sp"
+        android:background="#FAF9F9"
         android:layout_gravity="center"
         android:layout_marginTop="20dp"/>
 
