--- a/app/src/main/res/layout/hearder_menu.xml
+++ b/app/src/main/res/layout/hearder_menu.xml
@@ -31,7 +31,7 @@
         android:layout_height="match_parent"
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="-1dp"
-        android:background="#F6EEEE" />
+        android:background="#F8E4E4"/>
 
 
 </RelativeLayout>
