--- a/app/src/main/res/layout/mn_activity_manage_product.xml
+++ b/app/src/main/res/layout/mn_activity_manage_product.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.Manager.ManageProductActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="#F8E4E4">
 
     <LinearLayout
         android:layout_marginTop="20dp"
