--- a/app/src/main/res/layout/mn_activity_manage_product_type.xml
+++ b/app/src/main/res/layout/mn_activity_manage_product_type.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="#F8E4E4"
     tools:context=".activities.Manager.ProductTypeActivity">
 
     <Button
@@ -23,6 +24,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="20dp"
+        android:paddingLeft="10dp"
+        android:background="#F6F5F5"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_mn_create_productType"
