--- a/app/src/main/res/layout/mn_activity_manage_staff.xml
+++ b/app/src/main/res/layout/mn_activity_manage_staff.xml
@@ -5,14 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ListUser"
-    android:padding="10dp"
-    android:background="#CCE1F3">
+    android:background="#F8E4E4">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycle_mn_list_staff"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#CCE1F3"
+        android:background="#F8F8F8"
+        android:paddingLeft="10dp"
         android:layout_marginTop="50dp">
 
     </androidx.recyclerview.widget.RecyclerView>
