--- a/app/src/main/res/layout/mn_activity_product.xml
+++ b/app/src/main/res/layout/mn_activity_product.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".activities.Manager.ProductActivity"
     android:weightSum="1"
+    android:background="#F8E4E4"
     android:orientation="vertical">
 
 
@@ -39,7 +40,9 @@
             android:layout_height="match_parent"
             android:layout_marginLeft="20dp"
             android:layout_weight=".65"
+            android:background="#F8F8F8"
             android:hint="Tên"
+
             android:textSize="16sp" />
     </LinearLayout>
 
@@ -98,6 +101,7 @@
             android:layout_marginLeft="20dp"
             android:layout_weight=".65"
             android:hint="Số lượng"
+            android:background="#F8F8F8"
             android:textSize="16sp" />
     </LinearLayout>
 
@@ -124,6 +128,7 @@
             android:layout_marginLeft="20dp"
             android:layout_weight=".65"
             android:hint="Giá"
+            android:background="#F8F8F8"
             android:textSize="16sp" />
     </LinearLayout>
 
@@ -150,6 +155,7 @@
             android:layout_height="wrap_content"
             android:layout_weight=".65"
             android:layout_marginLeft="20dp"
+            android:background="#F8F8F8"
             app:srcCompat="@drawable/img_edit" />
 
     </LinearLayout>
