--- a/app/src/main/res/layout/mn_activity_promotion.xml
+++ b/app/src/main/res/layout/mn_activity_promotion.xml
@@ -5,6 +5,7 @@
     tools:context=".activities.Manager.PromotionActivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#F8E4E4"
     android:orientation="vertical">
 
     <TextView
@@ -26,41 +27,42 @@
             android:layout_height="match_parent"
             android:text="Promotion Name: "
             android:gravity="center"
+
             android:textSize="16sp" />
 
         <EditText
             android:id="@+id/txt_mn_PromotionName"
             android:layout_width="0dp"
+            android:layout_height="59dp"
             android:layout_weight=".7"
-            android:layout_height="match_parent"
-            android:textSize="16sp"
+            android:background="#F8F8F8"
             android:hint="Promotion Name"
-/>
+            android:textSize="16sp" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="56dp"
         android:layout_marginTop="20dp"
         android:weightSum="1">
 
         <TextView
             android:layout_width="0dp"
-            android:layout_weight=".3"
             android:layout_height="match_parent"
-            android:text="Promotion: "
+            android:layout_weight=".3"
             android:gravity="center"
+            android:text="Promotion: "
             android:textSize="16sp"
             tools:ignore="MissingConstraints" />
 
         <EditText
             android:id="@+id/txt_mn_Promotion"
             android:layout_width="0dp"
-            android:layout_weight=".7"
             android:layout_height="match_parent"
-            android:textSize="16sp"
+            android:layout_weight=".7"
+            android:background="#F8F8F8"
             android:hint="Promotion"
-            />
+            android:textSize="16sp" />
     </LinearLayout>
 
     <LinearLayout
@@ -80,27 +82,29 @@
         <EditText
             android:id="@+id/txt_mn_startPromotion"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="43dp"
             android:layout_weight="3.25"
+            android:background="#F8F8F8"
             android:clickable="false"
             android:cursorVisible="false"
             android:focusable="false"
             android:focusableInTouchMode="false"
             android:hint="Start Promotion"
-            android:textSize="16sp"/>
+            android:textSize="16sp" />
 
         <EditText
             android:id="@+id/txt_mn_endPromotion"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="43dp"
+            android:layout_marginLeft="10dp"
             android:layout_weight="3.25"
-            android:hint="End Promotion"
+            android:background="#F8F8F8"
             android:clickable="false"
             android:cursorVisible="false"
             android:focusable="false"
             android:focusableInTouchMode="false"
-            android:layout_marginLeft="10dp"
-            android:textSize="16sp"/>
+            android:hint="End Promotion"
+            android:textSize="16sp" />
 
     </LinearLayout>
 
@@ -137,7 +141,9 @@
         android:id="@+id/recycle_mn_listPromotion"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="20dp">
+        android:layout_marginTop="20dp"
+        android:paddingLeft="10dp"
+        android:background="#F8F8F8">
     </androidx.recyclerview.widget.RecyclerView>
 
 </LinearLayout>
