--- a/app/src/main/res/layout/mn_recycler_producttype_list_item.xml
+++ b/app/src/main/res/layout/mn_recycler_producttype_list_item.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
+    android:background="#F8E4E4"
     android:weightSum="1">
 
     <TextView
@@ -21,5 +22,6 @@
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:layout_weight=".6"
+        android:background="#DADADA"
         app:srcCompat="@android:drawable/ic_menu_delete" />
 </LinearLayout>
