--- a/app/src/main/res/layout/mn_recycler_table_list_item.xml
+++ b/app/src/main/res/layout/mn_recycler_table_list_item.xml
@@ -4,6 +4,7 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
+    android:background="#F8E4E4"
     android:weightSum="1">
 
     <TextView
@@ -21,6 +22,7 @@
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:layout_weight=".6"
+        android:background="#DADADA"
         app:srcCompat="@android:drawable/ic_menu_delete" />
 
 </LinearLayout>
