--- a/app/src/main/res/layout/recycler_mn_item_statistical.xml
+++ b/app/src/main/res/layout/recycler_mn_item_statistical.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="50dp"
     android:clickable="true"
     android:focusable="true"
-    android:background="?android:attr/selectableItemBackground"
+    android:background="#F8E4E4"
     android:weightSum="1">
 
     <TextView
         android:id="@+id/txt_mn_name_statistical"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_weight=".333"
         android:paddingLeft="10dp"
         android:singleLine="false"
@@ -20,7 +20,7 @@
     <TextView
         android:id="@+id/txt_mn_sum_statistical"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_weight=".333"
         android:singleLine="false"
         android:text="TextView"
@@ -29,7 +29,7 @@
     <TextView
         android:id="@+id/txt_mn_date_statistical"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_weight=".333"
         android:singleLine="false"
         android:text="TextView"
