--- a/app/src/main/res/layout/timekeeper_details.xml
+++ b/app/src/main/res/layout/timekeeper_details.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:padding="20dp"
     android:layout_marginBottom="10dp"
-    android:background="@drawable/border">
+    android:background="#F8E4E4">
 
     <TextView
         android:id="@+id/time_show_name"
