--- a/app/src/main/res/layout/w_activity_waiter.xml
+++ b/app/src/main/res/layout/w_activity_waiter.xml
@@ -5,6 +5,7 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#F8E4E4"
     android:fitsSystemWindows="true">
 
     <!-- Layout to contain contents of main body of screen (drawer will slide over this) -->
