--- a/app/src/main/res/layout/w_recycler_product_items.xml
+++ b/app/src/main/res/layout/w_recycler_product_items.xml
@@ -8,14 +8,14 @@
     android:layout_marginBottom="10dp"
     android:clickable="true"
     android:focusable="true"
-    android:background="?android:attr/selectableItemBackground"
+    android:background="#F8E4E4"
     android:weightSum="1">
 
     <ImageView
         android:id="@+id/imageview_w_image_recycler_view"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="0.3"
+        android:layout_weight="0.2"
         tools:srcCompat="@tools:sample/avatars" />
 
     <LinearLayout
@@ -72,6 +72,6 @@
         android:id="@+id/txt_w_recycler_producttype"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight=".2"
+        android:layout_weight=".3"
         android:text="TextView" />
 </LinearLayout>
